Byte arrays method parameters replaced with InputStream